fix: confusing and inaccurate docs

--- a/design-toolkit/components/src/components/tabs/tabs.docs.mdx
+++ b/design-toolkit/components/src/components/tabs/tabs.docs.mdx
@@ -11,7 +11,7 @@ Tabs organize content into multiple sections and allow users to navigate between
 ## Usage
 
 ```tsx
-import { Tabs } from '@standard-toolkit/components';
+import { Tabs } from '@accelint/design-toolkit';
 
 <Tabs defaultSelectedKey="tab1">
   <Tabs.List>
