feat: add sidenav.avatar (#468)

--- a/design-toolkit/components/src/components/sidenav/sidenav.docs.mdx
+++ b/design-toolkit/components/src/components/sidenav/sidenav.docs.mdx
@@ -22,8 +22,11 @@ It is composed of the following components:
 - **Sidenav** - Root component that manages the navigation state and layout
 - **Sidenav.Trigger** - Button component that controls the expansion/collapse of the sidenav
 - **Sidenav.Header** - Container for the navigation header, typically containing a logo and application title
+- **Sidenav.Avatar** - Icon display component with icon, heading, and text
 - **Sidenav.Item** - Interactive navigation item that can be selected, disabled, or contain nested items
 - **Sidenav.Divider** - Visual separator to group navigation items
+- **Sidenav.Content** - Container for content
+- **Sidenav.Footer** - Container for footer content
 
 ## Example Usage
 
@@ -42,25 +45,33 @@ It is composed of the following components:
 
     <Sidenav>
       <Sidenav.Header>
-        <Icon size="large">
-          <AppLogo />
-        </Icon>
-        <div>
-          <Heading className="text-header-m">Application Header</Heading>
-          <Heading className="text-header-s">subheader</Heading>
-        </div>
+        <Sidenav.Avatar>
+          <Icon><AppLogo /></Icon>
+          <Heading>Application Header</Heading>
+          <Text>subheader</Text>
+        </Sidenav.Avatar>
       </Sidenav.Header>
 
-      <Heading>Navigation</Heading>
-      <Sidenav.Item>
-        <Icon><HomeIcon /></Icon>
-        <Text>Home</Text>
-      </Sidenav.Item>
-      <Sidenav.Divider />
-      <Sidenav.Item isSelected>
-        <Icon><SettingsIcon /></Icon>
-        <Text>Settings</Text>
-      </Sidenav.Item>
+      <Sidenav.Content>
+        <Heading>Navigation</Heading>
+        <Sidenav.Item>
+          <Icon><HomeIcon /></Icon>
+          <Text>Home</Text>
+        </Sidenav.Item>
+        <Sidenav.Divider />
+        <Sidenav.Item isSelected>
+          <Icon><SettingsIcon /></Icon>
+          <Text>Settings</Text>
+        </Sidenav.Item>
+      </Sidenav.Content>
+
+      <Sidenav.Footer>
+        <Sidenav.Avatar>
+          <Icon><UserIcon /></Icon>
+          <Heading>User Name</Heading>
+          <Text>john@example.com</Text>
+        </Sidenav.Avatar>
+      </Sidenav.Footer>
     </Sidenav>
   </Drawer.Layout>
 </div>
@@ -73,7 +84,7 @@ It is composed of the following components:
 
 ### Sidenav Props
 - **`hidden`** `boolean` - Controls the visibility of the navigation panel
-- **`children`** `ReactNode` - Content to be rendered within the navigation
+- **`children`** `ReactNode` - Must contain exactly one `Sidenav.Header`, `Sidenav.Content`, and `Sidenav.Footer`
 - **`className`** `string` - Custom CSS class name for the root element
 
 ### Sidenav.Header Props
@@ -92,6 +103,18 @@ It is composed of the following components:
 - **`classNames`** `object` - Optional CSS class names for styling
   - **`button`** `string` - Class name for the button element
   - **`icon`** `string` - Class name for the icon element
+
+### Sidenav.Avatar Props
+- **`children`** `ReactNode` - Must contain exactly one `Icon`, `Heading`, and `Text` component
+- **`className`** `string` - Class name for the avatar container
+
+### Sidenav.Content Props
+- **`children`** `ReactNode` - Content to be rendered in the footer section
+- **`className`** `string` - Class name for the footer container
+
+### Sidenav.Footer Props
+- **`children`** `ReactNode` - Content to be rendered in the footer section
+- **`className`** `string` - Class name for the footer container
 
 ### Sidenav.Divider Props
 - **`className`** `string` - Custom CSS class name for the divider
