feat: add Sidenav.Menu

--- a/design-toolkit/components/src/components/sidenav/sidenav.docs.mdx
+++ b/design-toolkit/components/src/components/sidenav/sidenav.docs.mdx
@@ -25,6 +25,8 @@ It is composed of the following components:
 - **Sidenav.Avatar** - Icon display component with icon, heading, and text
 - **Sidenav.Item** - Interactive navigation item that can be selected, disabled, or contain nested items
 - **Sidenav.Link** - Interactive navigation item that can be selected, disabled, or contain nested items
+- **Sidenav.Menu** - Expandable menu component that contains nested navigation items
+- **Sidenav.Menu.Item** - Individual navigation item within a Sidenav.Menu
 - **Sidenav.Divider** - Visual separator to group navigation items
 - **Sidenav.Content** - Container for content
 - **Sidenav.Footer** - Container for footer content
@@ -64,6 +66,15 @@ It is composed of the following components:
           <Icon><SettingsIcon /></Icon>
           <Text>Settings</Text>
         </Sidenav.Item>
+        <Sidenav.Divider />
+        <Sidenav.Menu title="More Options" icon={<Icon><MenuIcon /></Icon>}>
+          <Sidenav.Menu.Item>
+            <Text>Sub Item 1</Text>
+          </Sidenav.Menu.Item>
+          <Sidenav.Menu.Item>
+            <Text>Sub Item 2</Text>
+          </Sidenav.Menu.Item>
+        </Sidenav.Menu>
       </Sidenav.Content>
 
       <Sidenav.Footer>
@@ -105,6 +116,23 @@ Supports all the `ToggleButton` [props and events](?path=/story/components-butto
 ### Sidenav.Link Props
 Supports all the `LinkButton` [props and events](?path=/story/components-button--link).
 
+### Sidenav.Menu Props
+- **`title`** `string` - Required title text displayed in the menu button and panel header
+- **`icon`** `ReactNode` - Required icon displayed in the menu button
+- **`children`** `ReactNode` - Menu items to be rendered within the expandable panel
+- **`classNames`** `object` - Optional CSS class names for styling different parts of the menu
+  - **`menu`** `string` - Class name for the disclosure container
+  - **`button`** `string` - Class name for the menu trigger button
+  - **`icon`** `string` - Class name for the chevron icon
+  - **`panel`** `string` - Class name for the disclosure panel
+  - **`panelContent`** `string` - Class name for the panel content container
+
+### Sidenav.Menu.Item Props
+Supports all the `ToggleButton` [props and events](?path=/story/components-button--toggle).
+- **`className`** `string` - Class name for the menu item
+
+
+
 ### Sidenav.Avatar Props
 - **`children`** `ReactNode` - Must contain exactly one `Icon`, `Heading`, and `Text` component
 - **`className`** `string` - Class name for the avatar container
@@ -137,6 +165,16 @@ The Sidenav uses the following style variants and states:
 ### Link States
 - Default: Basic navigation item styling
 - Hover: `enabled:hover:bg-interactive-muted-hover`
+- Disabled: Prevents interaction and applies muted styling
+
+### Menu States
+- Default: Basic menu button styling with chevron icon
+- Hover: `enabled:hover:bg-interactive-muted-hover`
+
+### Menu.Item States
+- Default: Basic navigation item styling within menu panel
+- Hover: `enabled:hover:bg-interactive-muted-hover`
+- Selected: `enabled:selected:bg-accent-primary-bold`
 - Disabled: Prevents interaction and applies muted styling
 
 ## Accessibility
