feat: support avatar

--- a/design-toolkit/components/src/components/sidenav/sidenav.docs.mdx
+++ b/design-toolkit/components/src/components/sidenav/sidenav.docs.mdx
@@ -131,10 +131,8 @@ Supports all the `LinkButton` [props and events](?path=/story/components-button-
 Supports all the `ToggleButton` [props and events](?path=/story/components-button--toggle).
 - **`className`** `string` - Class name for the menu item
 
-
-
 ### Sidenav.Avatar Props
-- **`children`** `ReactNode` - Must contain exactly one `Icon`, `Heading`, and `Text` component
+- **`children`** `ReactNode` - Must contain exactly one `Icon` or `Avatar` with a `Heading`, and `Text` component
 - **`className`** `string` - Class name for the avatar container
 
 ### Sidenav.Content Props
