feat: add tooltip to drawer menu item

--- a/design-toolkit/components/src/components/drawer/drawer.docs.mdx
+++ b/design-toolkit/components/src/components/drawer/drawer.docs.mdx
@@ -13,7 +13,7 @@ It is composed of the following components:
 - **Drawer** – Root component that manages the drawer state and view stack
 - **Drawer.Layout** – Container for layout structure, supports extending specific drawer's layout and drawer's push/overlay behavior
 - **Drawer.Menu** – Navigation menu for switching between views
-- **Drawer.Menu.Item** – Individual menu item, can trigger open/toggle for a drawer as well as show a specific view
+- **Drawer.Menu.Item** – Individual menu item, can trigger open/toggle for a drawer as well as show a specific view. Supports tooltips for better accessibility and user experience.
 - **Drawer.Panel** – Main panel container for drawer content
 - **Drawer.View** – Content region for a specific view, mapped to a unique id
 - **Drawer.Header** – Header region, typically for titles or actions
@@ -35,8 +35,8 @@ const ids = {
 
 <Drawer id={ids.drawer} defaultView={ids.a}>
   <Drawer.Menu>
-    <Drawer.Menu.Item for={ids.a}>View A</Drawer.Menu.Item>
-    <Drawer.Menu.Item for={ids.b}>View B</Drawer.Menu.Item>
+    <Drawer.Menu.Item for={ids.a} textValue="View A">View A</Drawer.Menu.Item>
+    <Drawer.Menu.Item for={ids.b} textValue="View B">View B</Drawer.Menu.Item>
   </Drawer.Menu>
   <Drawer.Panel>
     <Drawer.View id={ids.a}>
@@ -66,6 +66,14 @@ const ids = {
 ```
 
 <Canvas of={DrawerStories.StaticHeaderFooter} />
+
+## Drawer.Menu.Item
+
+The Drawer.Menu.Item component represents individual navigation items within the drawer menu.
+
+- **`for`** - The unique identifier fo the view this item should navigate to
+- **`toggle`** - When `true`, the menu item will toggle the visibility of the associated view instead of just opening it
+- **`textValue`** - Optional text that will be displayed in a tooltip when hovering over the menu item
 
 ## Drawer.View
 
